# mudl

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-shaders.ps1  build-shaders.sh  vcpkg.json
.github/: dependabot.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  ProjectSettings.cmake
data/: CMakeLists.txt
data/assets/: dire_cat.mdl  fs_plt_mudl.frag  fs_plt_mudl.glsl  vs_mudl.glsl
src/: CMakeLists.txt  ModelCache.cpp  ModelCache.hpp  TextureCache.cpp  TextureCache.hpp  extract.cpp  extract.hpp  fs_mudl.sc  fs_plt_mudl.sc  imgui.cpp  main.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  util.cpp  util.hpp  varying.def.sc  vs_mudl.glsl  vs_mudl.sc  vs_skin_mudl.sc
